# CustomLinearAlgebra

./: .gitignore  CLAUDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
docs/: Git工作流程.md  参考资源.md  学习规划总览.md  快速命令参考.md  知识点索引.md  迭代1-总结.md  迭代计划详解.md  问题与解决方案.md
docs/QA/: QA索引.md  README.md  iter01_Q1_向量归一化原理.md  iter01_Q2_缩放因子为什么是mag.md
src/core/: vector2d.py
src/examples/: iter01_vector2d_basic.py
tests/: test_vector2d.py
