[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-linear-algebra"
version = "0.1.0"
description = "从零实现的线性代数库 - VR/XR开发学习项目"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
keywords = ["linear-algebra", "computer-graphics", "vr", "xr", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Education",
]

dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pyvista>=0.43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "black>=23.7.0",
    "isort>=5.12.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipympl>=0.9.0",
    "ipywidgets>=8.0.0",
]
all = [
    "plotly>=5.17.0",
    "sympy>=1.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/CustomLinearAlgebra"
Documentation = "https://github.com/yourusername/CustomLinearAlgebra/blob/main/docs"
Repository = "https://github.com/yourusername/CustomLinearAlgebra"

[tool.setuptools]
packages = ["src.core", "src.graphics", "src.visualization"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyvista.*"
ignore_missing_imports = true
